[tool.poetry]
name = "dlink_hnap"
version = "0.1.0"
description = "Home Assistant custom integration for D-Link sensors"
authors = ["Pierre Ståhl <pierre.staahl@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.7"
homeassistant = "^0.109.0"
pre-commit = "^2.2.0"

[tool.poetry.dev-dependencies]

[tool.black]
line_length = 88
target_version = ["py37", "py38"]

[build-system]
requires = ["poetry>=1.0.0"]
build-backend = "poetry.masonry.api"
